--- a/register.html
+++ b/register.html
@@ -6,6 +6,19 @@
 </head>
 <section>
     <div>
-        
+        <label for="username">Please enter a valid email:</label>
+        <input type="email" id="username" name="username">
     </div>
+
+    <div>
+        <label for="password">Please create a password:</label>
+        <input type="password" id="password" name="password">
+    </div>
+
+    <div>
+        <form action="login.html" method="get>">
+            <button type="submit">Submit</button>
+        </form>>
+    </div>
+
 </section>
