--- a/register.html
+++ b/register.html
@@ -16,9 +16,9 @@
     </div>
 
     <div>
-        <form action="login.html" method="get>">
+        <form action="login.html" method="get">
             <button type="submit">Submit</button>
-        </form>>
+        </form>
     </div>
 
 </section>
