added a success screen after registration

--- a/register.html
+++ b/register.html
@@ -16,7 +16,7 @@
     </div>
 
     <div>
-        <form action="login.html" method="get">
+        <form action="registersucess.html" method="get">
             <button type="submit">Submit</button>
         </form>
     </div>
