--- a/html/login.html
+++ b/html/login.html
@@ -16,7 +16,10 @@
     </div>
 
     <div>
-        <button type="submit">Submit</button>
+        <form action="userprofile.html" method="post">
+            <button type="submit">Submit</button>
+        </form>
+        
     </div>
 
     <div>
