--- a/html/userprofile.html
+++ b/html/userprofile.html
@@ -114,6 +114,9 @@
             dateFormat: "m-d-Y"
           });
         </script>
-        
+    </div>
+
+    <div>
+        <button type="submit">Submit</button>
     </div>
 </form>
