login, registration, and admin login work good

--- a/html/adminLogin.html
+++ b/html/adminLogin.html
@@ -17,6 +17,8 @@
     </div>
 
     <div>
-        <button type="submit">Submit</button>
+        <form action="EventManagement.html" method="post">
+            <button type="submit">Submit</button>
+        </form>
     </div>
 </section>
