--- a/html/login.html
+++ b/html/login.html
@@ -16,11 +16,12 @@
     </div>
 
     <div>
-        <form action="userprofile.html" method="post">
+        <form action="UserProfile.html" method="post">
             <button type="submit">Submit</button>
         </form>
-        
     </div>
+
+    <a href="adminLogin.html">Admin? Please login here</a>
 
     <div>
         <a href="register.html">Create an account</a>
