added adminHome and userHome for easier management

--- a/html/adminLogin.html
+++ b/html/adminLogin.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Admin Login Page</title>
     <h2>Admin Login</h2>
 </head>
@@ -17,7 +19,7 @@
     </div>
 
     <div>
-        <form action="EventManagement.html" method="post">
+        <form action="adminHome.html" method="post">
             <button type="submit">Submit</button>
         </form>
     </div>
