--- a/html/VolunteerHistory.html
+++ b/html/VolunteerHistory.html
@@ -1,1 +1,67 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Volunteer History</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 20px;
+            background-color: #f4f4f4;
+        }
+        h1 {
+            text-align: center;
+        }
+        table {
+            width: 80%;
+            margin: auto;
+            border-collapse: collapse;
+            background-color: white;
+        }
+        th, td {
+            padding: 12px;
+            text-align: left;
+            border-bottom: 1px solid #ddd;
+        }
+        th {
+            background-color: #f2f2f2;
+        }
+        tbody tr:hover {
+            background-color: #f1f1f1;
+        }
+    </style>
+</head>
+<body>
+    <h1>Volunteer Participation History</h1>
+    <table>
+        <thead>
+            <tr>
+                <th>Event Name</th>
+                <th>Description</th>
+                <th>Location</th>
+                <th>Date</th>
+                <th>Status</th>
+            </tr>
+        </thead>
+        <tbody id="historyTableBody">
+            <tr>
+                <td>Food Drive</td>
+                <td>Organized a food drive at the community center.</td>
+                <td>Community Center</td>
+                <td>2023-09-15</td>
+                <td>Completed</td>
+            </tr>
+            <tr>
+                <td>Distribution Day</td>
+                <td>Distributed food to families in need.</td>
+                <td>Local Church</td>
+                <td>2023-10-05</td>
+                <td>Pending</td>
+            </tr>
+            <!-- More history data can be added dynamically here -->
+        </tbody>
+    </table>
+</body>
+</html>
 
