made it where userProfile submit redirects into userHome

--- a/html/UserProfile.html
+++ b/html/UserProfile.html
@@ -58,7 +58,7 @@
         <label for="availability">Availability (required, multiple dates allowed):</label><br>
         <input type="date" id="availability" name="availability" required multiple><br><br>
 
-        <input type="submit" value="Submit Profile">
+        <input onclick="window.location.href = 'userHome.html';" type="submit" value="Submit Profile">
     </form>
 </body>
 </html>
