--- a/html/userHome.html
+++ b/html/userHome.html
@@ -12,6 +12,7 @@
         Navigation Portal
     </p>
     <ul>
+        <li><a href="notif.html">Notifications</a></li>
         <li><a href="UserProfile.html">Change profile information</a></li>
         <li><a href="VolunteerHistory.html">Volunteer History</a></li>
     </ul>
