--- a/html/register.html
+++ b/html/register.html
@@ -6,21 +6,26 @@
     <title>Register Page</title>
     <h2>User Registration</h2>
 </head>
-<section>
-    <div>
-        <label for="username">Please enter a valid email:</label>
-        <input type="email" id="username" name="username">
-    </div>
+<body>
+    <section>
+        <form action="/register" method="post">
+            <!-- Email Input -->
+            <div>
+                <label for="username">Please enter a valid email:</label>
+                <input type="email" id="username" name="username" required>
+            </div>
 
-    <div>
-        <label for="password">Please create a password:</label>
-        <input type="password" id="password" name="password">
-    </div>
+            <!-- Password Input -->
+            <div>
+                <label for="password">Please create a password:</label>
+                <input type="password" id="password" name="password" required>
+            </div>
 
-    <div>
-        <form action="registersucess.html" method="post">
-            <button type="submit">Submit</button>
+            <!-- Submit Button -->
+            <div>
+                <button type="submit">Submit</button>
+            </div>
         </form>
-    </div>
-
-</section>
+    </section>
+</body>
+</html>
