Populate data with html and js

--- a/html/EventManagement.html
+++ b/html/EventManagement.html
@@ -8,8 +8,7 @@
 </head>
 <body>
     <h1>Event Management</h1>
-    <form id="eventForm" method="POST" action="http://localhost:3000/createEvent"></form>
-    <!--<form id="eventForm" action="" method="post">-->
+    <form id="eventForm" method="POST" action="http://localhost:3000/createEvent">
         <label for="event-name">Event Name (required, max 100 characters):</label><br>
         <input type="text" id="event-name" name="event-name" maxlength="100" required><br><br>
 
