--- a/html/login.html
+++ b/html/login.html
@@ -8,7 +8,7 @@
 <body>
     <h2>Welcome!</h2>
     <section>
-        <form action="/login" method="POST"> 
+        <form id="login"> 
             <div>
                 <label for="username">Login:</label>
                 <input type="email" id="username" name="username" placeholder="Please enter your username" required>
@@ -30,5 +30,35 @@
             <a href="register.html">Create an account</a>
         </div>
     </section>
+
+    <script>
+        document.getElementById('login').addEventListener('submit', async (event) => {
+            event.preventDefault(); // Prevent default form submission
+
+            const username = document.getElementById('username').value;
+            const password = document.getElementById('password').value;
+
+            try {
+                const response = await fetch('/login', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ username, password }),
+                });
+
+                if (response.ok) {
+                    const data = await response.json();
+                    localStorage.setItem('token', data.token); // Store token securely
+                    window.location.href = 'userHome.html'; // Redirect to user profile
+                } else {
+                    const error = await response.text();
+                    alert(error); // Show error to the user
+                }
+            } catch (error) {
+                console.error('Login error:', error);
+                alert('An error occurred while logging in. Please try again.');
+            }
+        });
+    </script>
 </body>
 </html>
+
