--- a/html/userHome.html
+++ b/html/userHome.html
@@ -6,15 +6,38 @@
     <title>User Home Page</title>
     <h2>User Home Page</h2>
 </head>
+<body>
+    <section>
+        <p id="welcomeMessage">Loading...</p>
+        <p>Navigation Portal</p>
+        <ul>
+            <li><a href="notif.html">Notifications</a></li>
+            <li><a href="UserProfile.html">Change profile information</a></li>
+            <li><a href="VolunteerHistory.html">Volunteer History</a></li>
+        </ul>
+    </section>
 
-<section>
-    <p>
-        Navigation Portal
-    </p>
-    <ul>
-        <li><a href="notif.html">Notifications</a></li>
-        <li><a href="UserProfile.html">Change profile information</a></li>
-        <li><a href="VolunteerHistory.html">Volunteer History</a></li>
-    </ul>
-    
-</section>
+    <script>
+        // Fetch the token from localStorage
+        const token = localStorage.getItem('token');
+        
+        if (token) {
+            fetch('/getUserFullName', {
+                method: 'GET',
+                headers: {
+                    'Authorization': `Bearer ${token}`
+                }
+            })
+            .then(response => response.json())  // Parse the JSON data
+            .then(data => {
+                // Check if fullName exists in the response data
+                if (data.fullName) {
+                    document.getElementById('welcomeMessage').textContent = `Welcome, ${data.fullName}`;
+                } else {
+                    document.getElementById('welcomeMessage').textContent = 'Error: Full name not found';
+                }
+            })
+        }
+    </script>
+</body>
+</html>
