--- a/html/adminLogin.html
+++ b/html/adminLogin.html
@@ -8,19 +8,49 @@
 </head>
 
 <section>
-    <div>
-        <label for="username">Login:</label>
-        <input type="email" id="username" name="username" placeholder="Please enter your username">
-    </div>
+    <form id="adminLogin"> 
+        <div>
+            <label for="username">Login:</label>
+            <input type="email" id="username" name="username" placeholder="Please enter your username" required>
+        </div>
 
-    <div>
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" placeholder="Please enter your password">
-    </div>
+        <div>
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" placeholder="Please enter your password" required>
+        </div>
 
-    <div>
-        <form action="adminHome.html" method="post">
+        <div>
             <button type="submit">Submit</button>
-        </form>
+        </div>
+    </form>
     </div>
 </section>
+
+<script>
+    document.getElementById('adminLogin').addEventListener('submit', async (event) => {
+        event.preventDefault(); // Prevent default form submission
+
+        const username = document.getElementById('username').value;
+        const password = document.getElementById('password').value;
+
+        try {
+            const response = await fetch('/login', {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                body: JSON.stringify({ username, password, loginType: 'adminLogin'}),
+            });
+
+            if (response.ok) {
+                const data = await response.json();
+                localStorage.setItem('token', data.token); // Store token securely
+                window.location.href = data.redirect; // Redirect to admin page
+            } else {
+                const error = await response.text();
+                alert(error); // Show error to the user
+            }
+        } catch (error) {
+            console.error('Login error:', error);
+            alert('An error occurred while logging in. Please try again.');
+        }
+    });
+</script>
