--- a/html/userHome.html
+++ b/html/userHome.html
@@ -22,7 +22,7 @@
         const token = localStorage.getItem('token');
         
         if (token) {
-            fetch('/getUserFullName', {
+            fetch('http://localhost:3000/getUserFullName', {
                 method: 'GET',
                 headers: {
                     'Authorization': `Bearer ${token}`
