--- a/html/index.html
+++ b/html/index.html
@@ -71,7 +71,7 @@
     <script>
         // Redirect to login page
         function redirectToLogin() {
-            window.location.href = "/html/login.html"; // Adjust to the correct login page
+            window.location.href = "login.html"; // Adjust to the correct login page
         }
 
         // Fetch and display events from the database
