--- a/html/notif.html
+++ b/html/notif.html
@@ -22,6 +22,6 @@
         <div class="clear-all" id="clear-all">Clear All</div>
     </div>
 
-    <script src="notif.js"></script>
+    <script src="../js/notif.js"></script>
 </body>
 </html>
