--- a/html/login.html
+++ b/html/login.html
@@ -48,8 +48,11 @@
                 if (response.ok) {
                     const data = await response.json();
                     localStorage.setItem('token', data.token); // Store token securely
+                    localStorage.setItem('user_id', data.user_id); // Store token securely
                     window.location.href = data.redirect; // Redirect to user profile
                 } else {
+                    localStorage.removeItem('token');
+                    localStorage.removeItem('user_id');
                     const error = await response.text();
                     alert(error); // Show error to the user
                 }
